<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    >

    <EditText
        android:id="@+id/reminderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionFilmID" />

    <TextView
        android:id="@+id/descriptionFilmID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:text="@string/reminderTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idSelectData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/reminderDate"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/reminderDate"
        app:layout_constraintTop_toBottomOf="@+id/descriptionFilmID" />

    <EditText
        android:id="@+id/reminderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:inputType="time"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderDate" />

    <Button
        android:id="@+id/idSelectTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/reminderTime"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/reminderTime"
        app:layout_constraintTop_toBottomOf="@+id/reminderDate" />

    <Button
        android:id="@+id/idReminderSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/colorBlack"
        android:text="@string/reminderSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderTime" />

    <Button
        android:id="@+id/idReminderCancell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:textColor="@color/colorBlack"
        android:text="@string/reminderCancell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderTime" />

</androidx.constraintlayout.widget.ConstraintLayout>